feat(readme): update project layout and add run script